--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,5 @@
-cart:
-  enabled: true
-cache:
-  inventory:
-    enabled: true
-scan:
-  enabled: true
+javaoperatorsdk:
+  controllers:
+    customservicecontroller:
+      retry:
+        maxAttempts: 3
