--- a/standard-service-operator/Chart.yaml
+++ b/standard-service-operator/Chart.yaml
@@ -1,5 +1,6 @@
 apiVersion: v2
-appVersion: "1.0"
+name: standard-service-operator
 description: A Helm chart for Kubernetes
-name: perfumeriasloli
+type: application
 version: 1.0.0
+appVersion: 1.0.0
