--- a/standard-service-operator/templates/standard_service_operator_v1beta1_deployment.yaml
+++ b/standard-service-operator/templates/standard_service_operator_v1beta1_deployment.yaml
@@ -21,18 +21,18 @@ spec:
       containers:
         - name: standard-service-operator-v1beta1
           image: standard-service-operator:1.0.0
-          imagePullPolicy: Always
+          imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 80
           readinessProbe:
             httpGet:
-              path: /health
+              path: /actuator/health
               port: 8080
             initialDelaySeconds: 1
             timeoutSeconds: 1
           livenessProbe:
             httpGet:
-              path: /health
+              path: /actuator/health
               port: 8080
             initialDelaySeconds: 30
             timeoutSeconds: 1
